[package]
name = "chromiumoxide-memfd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chromiumoxide = { git = "https://github.com/contentstech-com/chromiumoxide", rev = "04dcfbb0d32a9ba54938968ec1d4b10ffbbc76eb" }
futures = "0.3.32"
tokio = "1.52.3"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1.2", features = ["fs"] }

[build-dependencies]
blake3 = "1.8.5"
brotli = "8.0.4"
tar = { version = "0.4.46", default-features = false }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
